--- a/User Login/app/build.gradle
+++ b/User Login/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.shubham.mahalkar.passwordvalidation"
+        applicationId "com.passwordvalidation"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
